HW-281: Clear icon overlap issue

--- a/sass/vendor-override/select2/select2-bootstrap.scss
+++ b/sass/vendor-override/select2/select2-bootstrap.scss
@@ -70,6 +70,7 @@ div[ng-form="editRecipOptionsForm"] .select2-container,
     .select2-chosen {
       height: 28px;
       margin-right: 26px;
+      padding-right: 22px;
     }
 
     .select2-search-choice-close {
